@@ -1,3 +1,8 @@
+2004-03-30  Stefan Hundhammer  <sh@suse.de>
+
+	* Fixed KPacMan rendering in toolbar (thanks to Coolo)
+	
+
 2004-03-01  Stefan Hundhammer  <sh@suse.de>
 
 	* Updated German translation
